checkout page 2 done

--- a/checkout_after_saving_customer_details.html
+++ b/checkout_after_saving_customer_details.html
@@ -219,6 +219,232 @@
       </div>
     </div>
 
+
+    <!-- PRODUCT LIST AND CHECKOUT SUMMERY SECTION -->
+    <section class="container mt-5">
+      <div class="row">
+        <!-- Cart Product List Section -->
+        <div class="col-md-8">
+          <div class="card mb-4">
+            <div class="card-header">
+              <h5>Product Lists</h5>
+            </div>
+
+            <!-- product-1 -->
+            <section class="bg-light p-3 mt-2">
+              <!-- delivery info -->
+            <div class="d-flex justify-content-between">
+              <p class="ms-3"><b>Package 1 of 2</b></p>
+              <p class="me-2"><span class="text-muted">Shipped by</span> <span class="fw-bold">Basonto</span></p>
+            </div>
+
+            <p class="ms-3"><small>Delivery or Pickup</small></p>
+            <div class="ms-3 border border-1 border-info rounded-2 p-3 w-50 delivery_phn_width">
+              <i class="bi bi-check-circle-fill me-2 text-info"></i> 70 taka
+              <p class="ms-4 mt-2 small_text">Standard Delivery</p>
+              <p class="ms-4 small_text">Garanteed by next three working days</p>
+            </div>
+
+            <div class="card-body mt-3">
+              <div class="row">
+                <!-- Product -->
+                <div class="col-11">
+                  <div class="row cart-item">
+                    <!-- Product Image -->
+                    <div class="col-3 col-md-2">
+                      <a href="single_product.html">
+                        <img
+                        src="images/category-thumb-1.jpg"
+                        class="cart-img img-fluid"
+                      />
+                      </a>
+                    </div>
+
+                    <!-- Product Info -->
+                    <div class="col-8 col-md-4">
+                      <a
+                        href="single_product.html"
+                        class="text-decoration-none"
+                      >
+                        <p class="text-dark cart_product_title m-0">
+                          Product Name
+                        </p>
+                        <span class="text-muted product_small_text">
+                          Brand Name: Boshundhara,
+                        </span>
+                        <span class="text-muted product_small_text">
+                          Size: 42,
+                        </span>
+                        <span class="text-muted product_small_text">
+                          Color: Blue
+                        </span>
+                      </a>
+                    </div>
+
+                    <!-- Price -->
+                    <div class="col-5 col-md-2 mt_sm">
+                      <strong class="item-total">500 taka</strong>
+                    </div>
+
+                    <!-- Quantity -->
+                    <div class="col-4 col-md-2 mt_sm">
+                      <input
+                        type="number"
+                        class="form-control quantity"
+                        value="1"
+                        min="1"
+                        data-price="50"
+                      />
+                    </div>
+
+                    <!-- Remove -->
+                    <div class="col-3 col-md-1 mt_sm text-end">
+                      <button class="btn btn-danger btn-sm remove-item">
+                        <i class="bi bi-trash3"></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </section>
+
+            <!-- product-2 -->
+             <section class="bg-light p-3 mt-4">
+              <!-- delivery info -->
+            <div class="d-flex justify-content-between">
+              <p class="ms-3"><b>Package 2 of 2</b></p>
+              <p class="me-2"><span class="text-muted">Shipped by</span> <span class="fw-bold">Grand Mart Optics</span></p>
+            </div>
+
+            <p class="ms-3"><small>Delivery or Pickup</small></p>
+            <div class="ms-3 border border-1 border-info rounded-2 p-3 w-50 delivery_phn_width">
+              <i class="bi bi-check-circle-fill me-2 text-info"></i> 70 taka
+              <p class="ms-4 mt-2">Standard Delivery</p>
+              <p class="ms-4">Garanteed by next three working days</p>
+            </div>
+
+            <div class="card-body mt-3 ">
+              <div class="row">
+                <!-- Product -->
+                <div class="col-11">
+                  <div class="row cart-item">
+                    <!-- Product Image -->
+                    <div class="col-3 col-md-2">
+                      <a href="single_product.html">
+                        <img
+                        src="images/category-thumb-1.jpg"
+                        class="cart-img img-fluid"
+                      />
+                      </a>
+                    </div>
+
+                    <!-- Product Info -->
+                    <div class="col-8 col-md-4">
+                      <a
+                        href="single_product.html"
+                        class="text-decoration-none"
+                      >
+                        <p class="text-dark cart_product_title m-0">
+                          Product Name
+                        </p>
+                        <span class="text-muted product_small_text">
+                          Brand Name: Boshundhara,
+                        </span>
+                        <span class="text-muted product_small_text">
+                          Size: 42,
+                        </span>
+                        <span class="text-muted product_small_text">
+                          Color: Blue
+                        </span>
+                      </a>
+                    </div>
+
+                    <!-- Price -->
+                    <div class="col-5 col-md-2 mt_sm">
+                      <strong class="item-total">500 taka</strong>
+                    </div>
+
+                    <!-- Quantity -->
+                    <div class="col-4 col-md-2 mt_sm">
+                      <input
+                        type="number"
+                        class="form-control quantity"
+                        value="1"
+                        min="1"
+                        data-price="50"
+                      />
+                    </div>
+
+                    <!-- Remove -->
+                    <div class="col-3 col-md-1 mt_sm text-end">
+                      <button class="btn btn-danger btn-sm remove-item">
+                        <i class="bi bi-trash3"></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </section>
+
+          </div>
+        </div>
+
+        <!-- Order summery -->
+        <div class="col-md-4">
+          <div class="bg-light p-4">
+            <div class="summary-box mb-3">
+            <h5>Order Summary</h5>
+            <hr />
+            <div class="d-flex justify-content-between">
+              <p class="text-muted fw-bold">Subtotal (2 items)</p>
+              <p class="fw-bold" id="subtotal">1000 Taka</p>
+            </div>
+
+            <div class="d-flex justify-content-between">
+              <p class="text-muted fw-bold">Delivery Fee</p>
+              <p class="fw-bold" id="subtotal">140 Taka</p>
+            </div>
+
+            <!-- Coupon Section -->
+          <!-- <div class="summary-box">
+            <h6 class="text-muted">Apply Coupon</h6>
+            <div class="row">
+              <div class="col-md-8">
+                <input
+                  type="text"
+                  id="coupon"
+                  class="form-control mb-2"
+                  placeholder="Enter coupon"
+                />
+              </div>
+              <div class="col-md-4">
+                <button
+                  class="btn btn-outline-info text-dark w-100"
+                  onclick="applyCoupon()"
+                >
+                  Apply
+                </button>
+              </div>
+            </div>
+          </div> -->
+          <hr>
+
+          <div class="d-flex justify-content-between">
+              <p class="text-muted fw-bold">Total:</p>
+              <p class="fw-bold" id="subtotal">1140 Taka</p>
+            </div>
+
+            <a href="checkout_after_saving_customer_details.html" class="btn btn-primary w-100 mt-3" type="submit">Proceed to Checkout</a>
+
+            <!-- <button class="btn btn-primary w-100 mt-3">Proceed to Checkout</button> -->
+          </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FOOTER SECTION -->
     <footer class="pt-5 mb-5 section_animation">
       <div class="container-fluid">
