--- a/cart.html
+++ b/cart.html
@@ -276,7 +276,7 @@
       </div>
     </div>
 
-    <!-- PRODUCT LIST AND CHECKOUT SUMMERY SECTION -->
+    <!-- PRODUCT LIST AND ORDER SUMMERY SECTION -->
     <section class="container mt-5">
       <div class="row">
         <!-- Cart Product List Section -->
@@ -300,10 +300,12 @@
                   <div class="row cart-item">
                     <!-- Product Image -->
                     <div class="col-3 col-md-2">
-                      <img
+                      <a href="single_product.html">
+                        <img
                         src="images/category-thumb-1.jpg"
                         class="cart-img img-fluid"
                       />
+                      </a>
                     </div>
 
                     <!-- Product Info -->
@@ -329,7 +331,7 @@
 
                     <!-- Price -->
                     <div class="col-5 col-md-2 mt_sm">
-                      <strong class="item-total">$50.00</strong>
+                      <strong class="item-total">500 taka</strong>
                     </div>
 
                     <!-- Quantity -->
@@ -368,10 +370,12 @@
                   <div class="row cart-item">
                     <!-- Product Image -->
                     <div class="col-3 col-md-2">
-                      <img
+                      <a href="single_product.html">
+                        <img
                         src="images/category-thumb-1.jpg"
                         class="cart-img img-fluid"
                       />
+                      </a>
                     </div>
 
                     <!-- Product Info -->
@@ -397,7 +401,7 @@
 
                     <!-- Price -->
                     <div class="col-5 col-md-2 mt_sm">
-                      <strong class="item-total">$50.00</strong>
+                      <strong class="item-total">500 taka</strong>
                     </div>
 
                     <!-- Quantity -->
@@ -436,10 +440,12 @@
                   <div class="row cart-item">
                     <!-- Product Image -->
                     <div class="col-3 col-md-2">
-                      <img
+                      <a href="single_product.html">
+                        <img
                         src="images/category-thumb-1.jpg"
                         class="cart-img img-fluid"
                       />
+                      </a>
                     </div>
 
                     <!-- Product Info -->
@@ -465,7 +471,7 @@
 
                     <!-- Price -->
                     <div class="col-5 col-md-2 mt_sm">
-                      <strong class="item-total">$50.00</strong>
+                      <strong class="item-total">500 taka</strong>
                     </div>
 
                     <!-- Quantity -->
@@ -493,18 +499,23 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="summary-box mb-3">
-            <h5>Cart Summary</h5>
+          <div class="bg-light p-4">
+            <div class="summary-box mb-3">
+            <h5>Order Summary</h5>
             <hr />
-            <p>Subtotal: <span id="subtotal">BDT - 500 Taka</span></p>
-            <p>Discount: <span id="discount">BDT - 0 Taka</span></p>
-            <h6>Total: <span id="total">BDT - 500 Taka</span></h6>
-            <button class="btn btn-primary w-100 mt-3">Checkout</button>
-          </div>
+            <div class="d-flex justify-content-between">
+              <p class="text-muted fw-bold">Subtotal (2 items)</p>
+              <p class="fw-bold" id="subtotal">1000 Taka</p>
+            </div>
 
-          <!-- Coupon Section -->
+            <div class="d-flex justify-content-between">
+              <p class="text-muted fw-bold">Shipping Fee</p>
+              <p class="fw-bold" id="subtotal">100 Taka</p>
+            </div>
+
+            <!-- Coupon Section -->
           <div class="summary-box">
-            <h6>Apply Coupon</h6>
+            <h6 class="text-muted">Apply Coupon</h6>
             <div class="row">
               <div class="col-md-8">
                 <input
@@ -523,6 +534,17 @@
                 </button>
               </div>
             </div>
+          </div>
+
+          <div class="d-flex justify-content-between">
+              <p class="text-muted fw-bold">Total:</p>
+              <p class="fw-bold" id="subtotal">1100 Taka</p>
+            </div>
+
+            <a href="checkout_after_saving_customer_details.html" class="btn btn-primary w-100 mt-3" type="submit">Proceed to Checkout</a>
+
+            <!-- <button class="btn btn-primary w-100 mt-3">Proceed to Checkout</button> -->
+          </div>
           </div>
         </div>
       </div>
