--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                     <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li>
                     <li><a class="dropdown-item" href="single_product.html">SINGLE PRODUCT</a></li>
                     <li><a class="dropdown-item" href="cart.html">CART</a></li>
-                    <li><a class="dropdown-item" href="checkout.html">CHECKOUT</a></li>
+                    <li><a class="dropdown-item" href="checkout_without_customer_details.html">CHECKOUT PAGE 1</a></li>
+                    <li><a class="dropdown-item" href="checkout_after_saving_customer_details.html">CHECKOUT PAGE 2</a></li>
                     <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
                     <li><a class="dropdown-item" href="single_post.html">SINGLE BLOG</a></li>
                     <li><a class="dropdown-item" href="contact.html">CONTACT</a></li>
