checkout page 2 modified

--- a/checkout_after_saving_customer_details.html
+++ b/checkout_after_saving_customer_details.html
@@ -230,8 +230,34 @@
               <h5>Product Lists</h5>
             </div>
 
+            <!-- shipping & billing -->
+            <div class="bg-light py-4">
+              <div class="d-flex justify-content-between mt-2 ">
+                <p class="ms-3"><b>Shipping & Billing</b></p>
+              <a class="me-2 text-decoration-none fs-6" href="address.html">Edit</a>
+              </div>
+
+              <div class="d-flex gap-4 ms-3">
+                <p>Md. Yeasin</p>
+                <p>01891794409</p>
+              </div>
+
+              <div class="d-flex gap-4 ms-3">
+                <p class="bg-info px-3 py-1 rounded-3 align-items-center d-flex">Home</p>
+                <p class="mt-1">Commissioner road, Badda, Dhaka - North, Dhaka...</p>
+              </div>
+
+              <div class="border border-dotted-1 border-info rounded-2 p-3 w-75 ms-3 delivery_phn_width">
+                <a href="pickup_points.html" class="text-decoration-none">
+                  <p class="text-primary">Collect your parcels from a nearby location at a minimal delivery fee ></p>
+                <p class="text-muted small_text">8 suggested collection point(s) nearby <i class="bi bi-question-circle-fill ms-1"></i></p>
+                </a>
+              </div>
+
+            </div>
+
             <!-- product-1 -->
-            <section class="bg-light p-3 mt-2">
+            <section class="bg-light p-3 mt-4">
               <!-- delivery info -->
             <div class="d-flex justify-content-between">
               <p class="ms-3"><b>Package 1 of 2</b></p>
