--- a/checkout_without_customer_details.html
+++ b/checkout_without_customer_details.html
@@ -276,16 +276,349 @@
       </div>
     </div>
 
-    <!-- PRODUCT LIST AND CHECKOUT SUMMERY SECTION -->
+    <!-- ADDRESS SECTION -->
     <section class="container mt-5">
       <div class="row">
         <!-- Cart Product List Section -->
         <div class="col-md-8 col-12">
-          <h4>Add new shipping Address</h4>
-          <form action="" method="get" class="needs-validation" novalidate>
+          <div class="d-flex justify-content-between">
+            <h4>Add new shipping Address</h4>
+
+            <a
+              href="shipping_address.html"
+              class="text-decoration-none pe-3"
+              type="submit"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModal"
+              >Edit</a
+            >
+          </div>
+
+          <!-- shipping address modal -->
+          <!-- Button trigger modal -->
+
+          <!-- Modal -->
+          <div
+            class="modal fade py-3"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog modal-xl modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">
+                    Add new shipping Address
+                  </h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <form
+                    action=""
+                    method="get"
+                    class="needs-validation"
+                    novalidate
+                  >
+                    <div class="row">
+                      <!-- select delivery label -->
+                      <div class="mt-2">
+                        <p>Select a label for effective delivery:</p>
+                        <div class="d-flex gap-3">
+                          <button
+                            class="btn btn-outline-info px-4 py-2 text-dark"
+                          >
+                            <i class="bi bi-house"></i>
+                            Home
+                          </button>
+                          <button
+                            class="btn btn-outline-info px-4 py-2 text-dark"
+                          >
+                            <i class="bi bi-building"></i>
+                            Office
+                          </button>
+                        </div>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="row mt-4">
+                          <!-- full name -->
+                          <div class="col-12 mb-3">
+                            <label for="validationServer01" class="form-label"
+                              >Full Name:</label
+                            >
+                            <input
+                              type="text"
+                              class="form-control border-info"
+                              id="validationServer01"
+                              placeholder="Enter your full name"
+                              required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                            <div class="invalid-feedback">
+                              Enter a valid name
+                            </div>
+                          </div>
+
+                          <!-- phone number -->
+                          <div class="col-12 mb-3">
+                            <label
+                              for="exampleFormControlInput2"
+                              class="form-label"
+                              >Phone Number:</label
+                            >
+                            <input
+                              pattern="[0-9]{11,}"
+                              inputmode="numeric"
+                              class="form-control border-info"
+                              id="exampleFormControlInput2"
+                              placeholder="Enter your phone number"
+                              required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                            <div class="invalid-feedback">
+                              Enter a valid phone number
+                            </div>
+                          </div>
+
+                          <!-- Building / House No / Floor / Street -->
+                          <div class="col-12 mb-3">
+                            <label for="validationServer01" class="form-label"
+                              >Building / House No / Floor / Street:</label
+                            >
+                            <input
+                              type="text"
+                              class="form-control border-info"
+                              id="validationServer01"
+                              placeholder="Please enter"
+                              required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                            <div class="invalid-feedback">
+                              Enter a valid address
+                            </div>
+                          </div>
+
+                          <!-- Colony / Suburb / Locality / Landmark -->
+                          <div class="col-12 mb-3">
+                            <label for="validationServer01" class="form-label"
+                              >Colony / Suburb / Locality / Landmark:</label
+                            >
+                            <input
+                              type="text"
+                              class="form-control border-info"
+                              id="validationServer01"
+                              placeholder="Please enter"
+                              required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                            <div class="invalid-feedback">
+                              Enter a valid address
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-12 col-md-6">
+                        <div class="row mt-4">
+                          <!-- region -->
+                          <div class="col-12 mb-3">
+                            <label class="form-label">Region:</label>
+
+                            <div class="dropdown">
+                              <input
+                                type="text"
+                                class="form-control border-info pe-3 dropdown-toggle"
+                                placeholder="Select Region"
+                                data-bs-toggle="dropdown"
+                                readonly
+                              />
+
+                              <!-- Up & Down arrows -->
+                              <div
+                                class="position-absolute top-50 end-0 translate-middle-y me-3 text-muted"
+                              >
+                                <div class="d-flex flex-column lh-1">
+                                  <i class="bi bi-caret-up-fill"></i>
+                                  <i class="bi bi-caret-down-fill"></i>
+                                </div>
+                              </div>
+
+                              <ul class="dropdown-menu w-100">
+                                <li>
+                                  <a class="dropdown-item" href="#">Dhaka</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#"
+                                    >Chattogram</a
+                                  >
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Rajshahi</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Khulna</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Sylhet</a>
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+
+                          <!-- city -->
+                          <div class="col-12 mb-3">
+                            <label class="form-label">City:</label>
+
+                            <div class="dropdown">
+                              <input
+                                type="text"
+                                class="form-control border-info pe-3 dropdown-toggle"
+                                placeholder="Select city"
+                                data-bs-toggle="dropdown"
+                                readonly
+                              />
+
+                              <!-- Up & Down arrows -->
+                              <div
+                                class="position-absolute top-50 end-0 translate-middle-y me-3 text-muted"
+                              >
+                                <div class="d-flex flex-column lh-1">
+                                  <i class="bi bi-caret-up-fill"></i>
+                                  <i class="bi bi-caret-down-fill"></i>
+                                </div>
+                              </div>
+
+                              <ul class="dropdown-menu w-100">
+                                <li>
+                                  <a class="dropdown-item" href="#">Dhaka</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#"
+                                    >Chattogram</a
+                                  >
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Rajshahi</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Khulna</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Sylhet</a>
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+
+                          <!-- area -->
+                          <div class="col-12 mb-3">
+                            <label class="form-label">Area:</label>
+
+                            <div class="dropdown">
+                              <input
+                                type="text"
+                                class="form-control border-info pe-3 dropdown-toggle"
+                                placeholder="Select area"
+                                data-bs-toggle="dropdown"
+                                readonly
+                              />
+
+                              <!-- Up & Down arrows -->
+                              <div
+                                class="position-absolute top-50 end-0 translate-middle-y me-3 text-muted"
+                              >
+                                <div class="d-flex flex-column lh-1">
+                                  <i class="bi bi-caret-up-fill"></i>
+                                  <i class="bi bi-caret-down-fill"></i>
+                                </div>
+                              </div>
+
+                              <ul class="dropdown-menu w-100">
+                                <li>
+                                  <a class="dropdown-item" href="#">Dhaka</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#"
+                                    >Chattogram</a
+                                  >
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Rajshahi</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Khulna</a>
+                                </li>
+                                <li>
+                                  <a class="dropdown-item" href="#">Sylhet</a>
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+
+                          <!-- address -->
+                          <div class="col-12 mb-3">
+                            <label for="validationServer01" class="form-label"
+                              >Address:</label
+                            >
+                            <input
+                              type="text"
+                              class="form-control border-info"
+                              id="validationServer01"
+                              placeholder="For example: House# 12, Street# 5/A, ABC Road"
+                              required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                            <div class="invalid-feedback">
+                              Enter a valid address
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+
+                <div class="modal-footer">
+                  <div class="col-12 mt-2 d-flex justify-content-end gap-3">
+                    <button
+                      class="btn btn-outline-primary px-4 py-2"
+                      type="submit"
+                    >
+                      Cencel
+                    </button>
+                    <button class="btn btn-primary px-5 py-2" type="submit">
+                      Save
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- select delivery label -->
+          <div class="mt-3">
+            <p>Select a label for effective delivery:</p>
+            <div class="d-flex gap-3">
+              <button class="btn btn-outline-info px-4 py-2 text-dark">
+                <i class="bi bi-house"></i>
+                Home
+              </button>
+              <button class="btn btn-outline-info px-4 py-2 text-dark">
+                <i class="bi bi-building"></i>
+                Office
+              </button>
+            </div>
+          </div>
+
+          <form action="" method="get" class="needs-validation py-3" novalidate>
             <div class="row">
               <div class="col-md-6">
-                <div class="row mt-4">
+                <div class="row mt-2">
                   <!-- full name -->
                   <div class="col-12 mb-3">
                     <label for="validationServer01" class="form-label"
@@ -356,7 +689,7 @@
               </div>
 
               <div class="col-md-6">
-                <div class="row mt-4">
+                <div class="row mt-2">
                   <!-- region -->
                   <div class="col-12 mb-3">
                     <label class="form-label">Region:</label>
@@ -477,30 +810,17 @@
                     <div class="valid-feedback">Looks good!</div>
                     <div class="invalid-feedback">Enter a valid address</div>
                   </div>
-
-                  <!-- select delivery label -->
-                  <div class="mt-4">
-                    <p class="text-end">Select a label for effective delivery:</p>
-                      <div class="d-flex justify-content-end gap-3">
-                        <button class="btn btn-outline-info px-4 py-2 text-dark">
-                          <i class="bi bi-house"></i>
-                          Home
-                        </button>
-                        <button class="btn btn-outline-info px-4 py-2 text-dark">
-                          <i class="bi bi-building"></i>
-                          Office
-                        </button>
-                      </div>
-                  </div>
-
-                  
                 </div>
               </div>
             </div>
 
-            <div class="col-12 mt-5 d-flex justify-content-end gap-3">
-              <button class="btn btn-outline-primary px-4 py-2" type="submit">Cencel</button>
-              <button class="btn btn-primary px-5 py-2" type="submit">Save</button>
+            <div class="col-12 mt-3 d-flex justify-content-end gap-3">
+              <button class="btn btn-outline-primary px-4 py-2" type="submit">
+                Cencel
+              </button>
+              <button class="btn btn-primary px-5 py-2" type="submit">
+                Save
+              </button>
             </div>
           </form>
         </div>
@@ -531,7 +851,8 @@
                 href="checkout_after_saving_customer_details.html"
                 class="btn btn-primary w-100 mt-3 disabled"
                 type="submit"
-                >Proceed to Checkout</a>
+                >Proceed to Checkout</a
+              >
 
               <!-- <button class="btn btn-primary w-100 mt-3">Proceed to Checkout</button> -->
             </div>
