--- a/blog.html
+++ b/blog.html
@@ -188,10 +188,11 @@
                     PAGES
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li>
+                    <!-- <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li> -->
                     <li><a class="dropdown-item" href="single_product.html">SINGLE PRODUCT</a></li>
                     <li><a class="dropdown-item" href="cart.html">CART</a></li>
-                    <li><a class="dropdown-item" href="checkout.html">CHECKOUT</a></li>
+                    <li><a class="dropdown-item" href="checkout_without_customer_details.html">CHECKOUT PAGE 1</a></li>
+                    <li><a class="dropdown-item" href="checkout_after_saving_customer_details.html">CHECKOUT PAGE 2</a></li>
                     <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
                     <li><a class="dropdown-item" href="single_post.html">SINGLE BLOG</a></li>
                     <li><a class="dropdown-item" href="contact.html">CONTACT</a></li>
@@ -331,7 +332,7 @@
               <div class="px-3">
                 <a href="single_post.html" class="text-decoration-none">
                   <h4 class="text-dark">
-                    10 Different Types of comfortable clothes ideas for women
+                    10 Different Types of comfortable clothes
                   </h4>
 
                   <p class="text-muted">
