--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     PAGES
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li>
+                    <!-- <li><a class="dropdown-item" href="about_us.html">ABOUT US</a></li> -->
                     <li><a class="dropdown-item" href="single_product.html">SINGLE PRODUCT</a></li>
                     <li><a class="dropdown-item" href="cart.html">CART</a></li>
                     <li><a class="dropdown-item" href="checkout_without_customer_details.html">CHECKOUT PAGE 1</a></li>
